fix: adiciona totalComprasAbertas na conversão para CartaoCreditoResponse. - Corrige a conversão da entidade CartaoCredito para CartaoCreditoResponse, garantindo que o campo totalComprasAbertas seja corretamente incluído na resposta da API.